Add page: debug info.

--- a/src/public/css/elements/forms.less
+++ b/src/public/css/elements/forms.less
@@ -68,9 +68,12 @@ form input[type="submit"].fake-link {
     text-decoration: none;
     padding: 0;
     margin: 0;
-    background-color: transparent;
-    border: none;
+    background-color: inherit;
     font-weight: normal;
+    border: none;
+    border-radius: 0;
+    outline: none;
+    box-shadow: none;
 
     &:hover {
         top: 0;
