Add "register" page.

--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -27,7 +27,7 @@
 
     <p>
         <b>Not got an account?</b>
-        <a href="/register">Register</a>
+        <a href="/register?continueTo=<%= continueTo %>">Register</a>
     </p>
 
     <p>
