--- a/src/public/css/main.less
+++ b/src/public/css/main.less
@@ -1,6 +1,7 @@
 @import 'reset';
 @import 'layout';
 @import 'elements/buttons';
+@import 'elements/clearfix';
 @import 'elements/forms';
 @import 'elements/main-menu';
 @import 'elements/bordered-box';
