--- a/src/views/inactive-location.ejs
+++ b/src/views/inactive-location.ejs
@@ -8,7 +8,9 @@
 
         <h2><%= building.name %></h2>
 
-        <p>This building is not in use at the moment. If you think this is a mistake, please contact your building manager.</p>
+        <h3><%= location.name %></h3>
+
+        <p>This location is not in use at the moment. If you think this is a mistake, please contact your building manager.</p>
 
         <%- include('partials/ticket-list', {tickets, showNoTicketsMessage: false}) %>
     </div>
