--- a/src/views/partials/global-header.ejs
+++ b/src/views/partials/global-header.ejs
@@ -31,7 +31,7 @@
             <ul>
                 <li <% if (mainNavActiveTab === 'report') {%>class="active"<% } %>"><a href="/">Report Issue</a></li>
                 <li <% if (mainNavActiveTab === 'tickets') {%>class="active"<% } %>"><a href="/my-tickets">My Tickets</a></li>
-                <li <% if (mainNavActiveTab === 'account') {%>class="active"<% } %>"><a href="/account">My Account</a></li>
+                <li <% if (mainNavActiveTab === 'my-account') {%>class="active"<% } %>"><a href="/my-account">My Account</a></li>
                 <li <% if (mainNavActiveTab === 'other') {%>class="active"<% } %>"><a href="/other">Other</a></li>
             </ul>
         </nav>
