Add page to view ticket (not finished).

--- a/src/public/css/layout.less
+++ b/src/public/css/layout.less
@@ -9,7 +9,7 @@ select,
 button,
 a.button,
 input[type="submit"] {
-    font: 16px/1.5 'Lucida Grande', Helvetica, Arial, sans-serif;
+    font: 16px/1.5 'Source Sans Pro', 'Lucida Grande', Helvetica, Arial, sans-serif;
     color: #606060;
 }
 
