--- a/src/public/css/main.less
+++ b/src/public/css/main.less
@@ -1,11 +1,15 @@
 @import 'reset';
 @import 'layout';
+@import '../generated/icons';
 @import 'elements/buttons';
 @import 'elements/clearfix';
 @import 'elements/forms';
 @import 'elements/main-menu';
 @import 'elements/bordered-box';
 @import 'elements/loading-animation';
+@import 'elements/switch';
+@import 'elements/icon-colors';
 @import 'pages/home';
 @import 'pages/building';
 @import 'pages/other-page';
+@import 'pages/ticket';
