--- a/src/views/partials/global-header.ejs
+++ b/src/views/partials/global-header.ejs
@@ -3,6 +3,7 @@
     <head>
         <title><%= website.name %></title>
         <link rel="stylesheet" href="/css/main.css" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" type="text/css" />
         <% if (favicon) { %>
         <link rel="icon shortcut" href="<%= favicon.compressedUrl %>" />
         <link rel="apple-touch-icon" href="<%= favicon.compressedUrl %>" />
