--- a/src/views/partials/ticket-list.ejs
+++ b/src/views/partials/ticket-list.ejs
@@ -1,7 +1,7 @@
 <% if (tickets.length) { %>
     <ul>
         <% tickets.forEach(ticket => { %>
-            <li><a href="/tickets/<%= ticket.id %>"><%= ticket.friendlyId %></a></li>
+            <li><a href="/tickets/<%= ticket.friendlyId %>"><%= ticket.friendlyId %></a></li>
         <% }) %>
     </ul>
 <% } else if (showNoTicketsMessage) { %>
