Add page to report fault.

--- a/src/public/css/main.less
+++ b/src/public/css/main.less
@@ -7,9 +7,12 @@
 @import 'elements/main-menu';
 @import 'elements/bordered-box';
 @import 'elements/loading-animation';
+@import 'elements/report-question-table';
 @import 'elements/switch';
 @import 'elements/icon-colors';
+@import 'elements/modals';
 @import 'pages/home';
 @import 'pages/building';
 @import 'pages/other-page';
+@import 'pages/report';
 @import 'pages/ticket';
