--- a/src/public/css/elements/buttons.less
+++ b/src/public/css/elements/buttons.less
@@ -10,6 +10,7 @@ input[type="submit"] {
     text-decoration: none;
     font-weight: bold;
     box-shadow: 0 0px 1px var(--text-over-highlight-color);
+    outline: none;
 
     &:hover {
         position: relative;
