--- a/src/public/css/layout.less
+++ b/src/public/css/layout.less
@@ -91,7 +91,8 @@ h4 {
     font-size: 22px;
 }
 
-.page-content {
+.page-content,
+.modal {
     padding-top: 20px;
     padding-bottom: 20px;
 
@@ -191,4 +192,9 @@ i, em {
     max-width: 150px;
     max-height: 150px;
     margin-left: 1em;
+
+    @media only screen and (max-width: 600px) {
+        max-width: 125px;
+        max-height: 125px;
+    }
 }
