Replace native alerts with a modal window.

--- a/src/public/css/elements/modals.less
+++ b/src/public/css/elements/modals.less
@@ -3,3 +3,11 @@
 .blocker {
     background-color: rgba(0, 0, 0, 0.65);
 }
+
+#alert-modal {
+    text-align: center;
+
+    h1 {
+        margin-bottom: 10px;
+    }
+}
