--- a/src/views/partials/copyright-footer.ejs
+++ b/src/views/partials/copyright-footer.ejs
@@ -6,5 +6,11 @@
 
         <div class="loading-animation">
         </div>
+
+        <div id="alert-modal" class="modal">
+            <h1></h1>
+            <p></p>
+            <button>OK</button>
+        </div>
     </body>
 </html>
