Add "My Tickets" page.

--- a/src/views/partials/ticket-list.ejs
+++ b/src/views/partials/ticket-list.ejs
@@ -5,5 +5,5 @@
         <% }) %>
     </ul>
 <% } else if (showNoTicketsMessage) { %>
-    <p><%= showNoTicketsMessage %></p>
+    <p class="no-tickets-message"><%= showNoTicketsMessage %></p>
 <% } %>
