Styles for ticket lists.

--- a/src/public/css/main.less
+++ b/src/public/css/main.less
@@ -11,6 +11,7 @@
 @import 'elements/switch';
 @import 'elements/icon-colors';
 @import 'elements/modals';
+@import 'elements/ticket-list';
 @import 'pages/home';
 @import 'pages/building';
 @import 'pages/other-page';
