--- a/src/views/partials/global-header.ejs
+++ b/src/views/partials/global-header.ejs
@@ -15,6 +15,7 @@
         <meta name="msapplication-navbutton-color" content="<%= account.primaryColorHex %>" />
         <meta name="application-name" content="<%= website.name %>" />
         <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width" />
+        <link rel="manifest" href="/manifest.json" />
         <style>
             :root {
                 --primary-color: <%= account.primaryColorHex %>;
