--- a/src/views/partials/global-header.ejs
+++ b/src/views/partials/global-header.ejs
@@ -33,7 +33,7 @@
     </head>
     <body>
         <nav id="main-menu">
-            <ul>
+            <ul class="container">
                 <li <% if (mainNavActiveTab === 'report') {%>class="active"<% } %>"><a href="/">Report Issue</a></li>
                 <li <% if (mainNavActiveTab === 'tickets') {%>class="active"<% } %>"><a href="/my-tickets">My Tickets</a></li>
                 <li <% if (mainNavActiveTab === 'my-account') {%>class="active"<% } %>"><a href="/my-account">My Account</a></li>
