--- a/src/views/partials/page-header.ejs
+++ b/src/views/partials/page-header.ejs
@@ -1,9 +1,9 @@
 <header class="page-header">
-    <div class="container">
+    <div class="container <%= (isLoggedIn ? 'is-logged-in' : 'not-logged-in') %>">
         <h1><%= title %></h1>
 
         <% if (!isLoggedIn) { %>
-            <a href="/login" class="button">Login</a>
+            <a href="/login" class="button login">Login</a>
         <% } %>
     </div>
 </header>
