--- a/src/views/partials/global-header.ejs
+++ b/src/views/partials/global-header.ejs
@@ -5,8 +5,8 @@
         <link rel="stylesheet" href="/css/main.css" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" type="text/css" />
         <% if (favicon) { %>
-        <link rel="icon shortcut" href="<%= favicon.compressedUrl %>" />
-        <link rel="apple-touch-icon" href="<%= favicon.compressedUrl %>" />
+        <link rel="icon shortcut" href="/favicon.png?width=32&height=32" />
+        <link rel="apple-touch-icon" href="/favicon.png?width=32&height=32" />
         <% } %>
         <meta name="mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-title" content="<%= website.name %>" />
