Use LESS variables instead of CSS variables (better cross-browser compat.).

--- a/src/public/css/elements/buttons.less
+++ b/src/public/css/elements/buttons.less
@@ -5,11 +5,11 @@ input[type="submit"] {
     padding: 10px 14px;
     border: none;
     border-radius: 5px;
-    background-color: var(--highlight-color);
-    color: var(--text-over-highlight-color);
+    background-color: @highlightColor;
+    color: @textOverHighlightColor;
     text-decoration: none;
     font-weight: bold;
-    box-shadow: 0 0px 1px var(--text-over-highlight-color);
+    box-shadow: 0 0px 1px @textOverHighlightColor;
     outline: none;
 
     &:hover {
