--- a/src/public/css/elements/forms.less
+++ b/src/public/css/elements/forms.less
@@ -68,7 +68,7 @@ textarea {
 }
 
 form input[type="submit"].fake-link {
-    color: var(--highlight-color);
+    color: @highlightColor;
     text-decoration: none;
     padding: 0;
     margin: 0;
