--- a/src/public/css/elements/main-menu.less
+++ b/src/public/css/elements/main-menu.less
@@ -2,7 +2,7 @@
     max-height: 50px;
     min-height: 50px;
     background-color: #dddddd;
-    color: var(--reporter-app-bottom-nav-active-color);
+    color: @reporterAppBottomNavActiveColor;
     display: flex;
 
     a {
@@ -16,7 +16,7 @@
         }
     }
     li.active a {
-        color: var(--reporter-app-bottom-nav-active-color);
+        color: @reporterAppBottomNavActiveColor;
     }
 
     ul {
