--- a/src/public/css/elements/switch.less
+++ b/src/public/css/elements/switch.less
@@ -44,11 +44,11 @@
         }
 
         input:checked + .slider {
-            background-color: var(--highlight-color);
+            background-color: @highlightColor;
         }
 
         input:focus + .slider {
-            box-shadow: 0 0 1px var(--highlight-color);
+            box-shadow: 0 0 1px @highlightColor;
         }
 
         input:checked + .slider:before {
