--- a/src/public/css/elements/ticket-list.less
+++ b/src/public/css/elements/ticket-list.less
@@ -11,7 +11,7 @@
     color: inherit;
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
-    border-bottom: 4px solid var(--primary-color);
+    border-bottom: 4px solid @primaryColor;
     display: flex;
     flex-direction: row;
     border-left: 1px solid #ccc;
