--- a/src/public/css/layout.less
+++ b/src/public/css/layout.less
@@ -34,8 +34,8 @@ body {
 }
 
 .page-header {
-    background-color: var(--primary-color);
-    color: var(--text-over-primary-color);
+    background-color: @primaryColor;
+    color: @textOverPrimaryColor;
     width: 100%;
     font-size: 20px;
     padding-top: 20px;
@@ -79,7 +79,7 @@ body {
 }
 
 a {
-    color: var(--highlight-color);
+    color: @highlightColor;
     text-decoration: none;
 }
 
@@ -131,7 +131,7 @@ i, em {
 }
 
 ::selection {
-    background: var(--highlight-color);
+    background: @highlightColor;
     color: white;
 }
 
