--- a/src/public/css/pages/report.less
+++ b/src/public/css/pages/report.less
@@ -8,9 +8,9 @@
         margin-bottom: 8px;
 
         &.active {
-            background-color: var(--highlight-color);
-            border-color: var(--highlight-color);
-            color: var(--text-over-highlight-color);
+            background-color: @highlightColor;
+            border-color: @highlightColor;
+            color: @textOverHighlightColor;
         }
     }
 
