--- a/src/public/css/elements/bordered-box.less
+++ b/src/public/css/elements/bordered-box.less
@@ -5,7 +5,7 @@
     border-radius: 5px;
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
-    border-bottom: 4px solid var(--primary-color);
+    border-bottom: 4px solid @primaryColor;
     box-shadow: 0px 0px 2px #999999;
 
     h2 {
