More cross-browser fixes.

--- a/src/public/css/elements/buttons.less
+++ b/src/public/css/elements/buttons.less
@@ -9,8 +9,12 @@ input[type="submit"] {
     color: @textOverHighlightColor;
     text-decoration: none;
     font-weight: bold;
-    box-shadow: 0 0px 1px @textOverHighlightColor;
     outline: none;
+
+    // Remove default button styling on iOS Safari.
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
 
     &:hover {
         position: relative;
