--- a/src/public/css/layout.less
+++ b/src/public/css/layout.less
@@ -168,12 +168,12 @@ i, em {
     }
     .page-content {
         padding-top: 75px;
-        padding-bottom: 45px;
+        padding-bottom: 60px;
     }
     .copyright-footer {
         display: none;
     }
-    a.button.login {
+    a.button.log-in {
         padding: 5px 10px;
     }
 }
