--- a/src/views/log-in.ejs
+++ b/src/views/log-in.ejs
@@ -2,19 +2,19 @@
 
 <%- include('partials/page-header', {title: website.name}) %>
 
-<div class="page-content" id="login-page">
+<div class="page-content">
     <div class="bordered-box">
-        <h1>Login</h1>
+        <h1>Log In</h1>
 
-        <form id="login-form">
+        <form id="log-in-form">
             <p>
-                <label for="login-email">Email Address:</label>
-                <input type="email" id="login-email" name="email" value="<%= email %>" />
+                <label for="log-in-email">Email Address:</label>
+                <input type="email" id="log-in-email" name="email" value="<%= email %>" />
             </p>
 
             <p>
-                <label for="login-password">Password:</label>
-                <input type="password" id="login-password" name="password" />
+                <label for="log-in-password">Password:</label>
+                <input type="password" id="log-in-password" name="password" />
             </p>
 
             <p>
