--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -2,7 +2,7 @@
 
 <%- include('partials/page-header', {title: 'Register For ' + website.name}) %>
 
-<div class="page-content" id="login-page">
+<div class="page-content">
     <div class="bordered-box">
         <h1>Register</h1>
 
@@ -30,7 +30,7 @@
     </div>
 
     <p>
-        <a href="/login?continueTo=<%= continueTo %>" class="button">Already registered? Log in here</a>
+        <a href="/log-in?continueTo=<%= continueTo %>" class="button">Already registered? Log in here</a>
     </p>
 </div>
 
