--- a/src/views/reset-password.ejs
+++ b/src/views/reset-password.ejs
@@ -2,7 +2,7 @@
 
 <%- include('partials/page-header', {title: 'Reset Password For ' + website.name}) %>
 
-<div class="page-content" id="login-page">
+<div class="page-content">
     <div class="bordered-box">
         <h1>Reset Password</h1>
 
@@ -23,7 +23,7 @@
     </div>
 
     <p>
-        <a href="/login" class="button">Remembered your password?</a>
+        <a href="/log-in" class="button">Remembered your password?</a>
     </p>
 
     <p>
