--- a/src/views/partials/page-header.ejs
+++ b/src/views/partials/page-header.ejs
@@ -3,7 +3,7 @@
         <h1><%= title %></h1>
 
         <% if (!isLoggedIn) { %>
-            <a href="/login" class="button login">Login</a>
+            <a href="/log-in" class="button log-in">Log In</a>
         <% } %>
     </div>
 </header>
