Get user's location and send to server.

--- a/src/views/report.ejs
+++ b/src/views/report.ejs
@@ -2,6 +2,10 @@
 
 <%- include('partials/page-header', {title: 'Report Issue'}) %>
 
+<script>
+    getUserLocation();
+</script>
+
 <div class="page-content" id="report-page">
     <form id="report-form" enctype="multipart/form-data">
         <div class="fieldset bordered-box">
