--- a/src/views/ticket.ejs
+++ b/src/views/ticket.ejs
@@ -4,6 +4,7 @@
 
 <script>
     window.ticketId = '<%= ticket.id %>';
+    getUserLocation();
 </script>
 
 <div class="page-content" id="ticket-page">
