--- a/src/views/ticket.ejs
+++ b/src/views/ticket.ejs
@@ -5,6 +5,7 @@
 <script>
     window.ticketId = '<%= ticket.id %>';
     getUserLocation();
+    attemptToEnablePushNotifications();
 </script>
 
 <div class="page-content" id="ticket-page">
