--- a/src/views/report.ejs
+++ b/src/views/report.ejs
@@ -4,6 +4,7 @@
 
 <script>
     getUserLocation();
+    attemptToEnablePushNotifications();
 </script>
 
 <div class="page-content" id="report-page">
