--- a/src/views/partials/global-header.ejs
+++ b/src/views/partials/global-header.ejs
@@ -5,8 +5,8 @@
         <link rel="stylesheet" href="/css/main.css" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" type="text/css" />
         <% if (favicon) { %>
-        <link rel="icon shortcut" href="/favicon.png?width=32&height=32" />
-        <link rel="apple-touch-icon" href="/favicon.png?width=32&height=32" />
+            <link rel="icon shortcut" href="/favicon.png?width=32&height=32" />
+            <link rel="apple-touch-icon" href="/favicon.png?width=32&height=32" />
         <% } %>
         <meta name="mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-title" content="<%= website.name %>" />
@@ -16,12 +16,34 @@
         <meta name="application-name" content="<%= website.name %>" />
         <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width" />
         <link rel="manifest" href="/manifest.json" />
+
         <script>
             window.API_BASE_URL = 'https://<%= config.apiHostname %>';
             window.API_AUTHORIZATION = <%- cookies.authToken ? '"User ' + cookies.authToken + '"' : 'null' %>;
             window.ENABLE_PUSH_NOTIFICATIONS = <%- config.enablePushNotifications ? 'true' : 'false' %>;
             window.FCM_KEY = <%- config.fcmKey ? '"' + config.fcmKey + '"' : 'null' %>;
+
+            <% if (isLoggedIn) { %>
+                window.userId = '<%= user.id %>';
+            <% } %>
         </script>
+
+        <% if (config.enablePushNotifications) { %>
+            <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase-app.js"></script>
+            <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase-messaging.js"></script>
+            <script>
+                var config = {
+                    apiKey: 'AIzaSyDFhldbhCptUVdW4WKwyTnCVrzNI2z6ZJk',
+                    authDomain: 'faultfixers-949cd.firebaseapp.com',
+                    databaseURL: 'https://faultfixers-949cd.firebaseio.com',
+                    projectId: 'faultfixers-949cd',
+                    storageBucket: 'faultfixers-949cd.appspot.com',
+                    messagingSenderId: '834435990355',
+                };
+                firebase.initializeApp(config);
+            </script>
+        <% } %>
+
         <script src="/js/all.js"></script>
     </head>
     <body>
