Ensure header/footer are always on top of content in mobile layout.

--- a/src/public/css/layout.less
+++ b/src/public/css/layout.less
@@ -33,6 +33,12 @@ body {
     padding-right: 15px;
 }
 
+.page-header,
+.copyright-footer,
+#main-menu {
+    z-index: 100;
+}
+
 .page-header {
     background-color: @primaryColor;
     color: @textOverPrimaryColor;
