--- a/src/views/partials/page-header.ejs
+++ b/src/views/partials/page-header.ejs
@@ -1,9 +1,5 @@
 <header class="page-header">
-    <div class="container <%= (isLoggedIn ? 'is-logged-in' : 'not-logged-in') %>">
+    <div class="container">
         <h1><%= title %></h1>
-
-        <% if (!isLoggedIn) { %>
-            <a href="/log-in" class="button log-in">Log In</a>
-        <% } %>
     </div>
 </header>
