Highlight active main menu item.

--- a/src/public/css/elements/main-menu.less
+++ b/src/public/css/elements/main-menu.less
@@ -17,6 +17,7 @@
     }
     li.active a {
         color: @reporterAppBottomNavActiveColor;
+        border-bottom: 1px dotted @reporterAppBottomNavActiveColor;
     }
 
     ul {
