--- a/src/views/report.ejs
+++ b/src/views/report.ejs
@@ -12,7 +12,7 @@
         <div class="fieldset bordered-box">
             <h3>Add Photo</h3>
 
-            <input name="image" type="file" accept="image/*" capture="camera" />
+            <input name="image" type="file" accept="image/*" />
         </div>
 
         <% if (promptForTicketPrivacy) { %>
