Use rectangle logo instead of square logo.

--- a/src/views/account-tickets.ejs
+++ b/src/views/account-tickets.ejs
@@ -4,7 +4,7 @@
 
 <div class="page-content">
     <div class="bordered-box clearfix">
-        <img src="<%= squareLogo.compressedUrl %>" class="side-logo" />
+        <img src="<%= logo.compressedUrl %>" class="side-logo" />
 
         <h2><%= account.name %></h2>
 
