--- a/src/views/building.ejs
+++ b/src/views/building.ejs
@@ -4,7 +4,7 @@
 
 <div class="page-content" id="building-page">
     <div class="bordered-box clearfix">
-        <img src="<%= squareLogo.compressedUrl %>" class="side-logo" />
+        <img src="<%= logo.compressedUrl %>" class="side-logo" />
 
         <h2><%= building.name %></h2>
 
