--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -4,7 +4,7 @@
 
 <div class="page-content" id="home-page">
     <div class="bordered-box clearfix">
-        <img src="<%= squareLogo.compressedUrl %>" class="side-logo" />
+        <img src="<%= logo.compressedUrl %>" class="side-logo" />
 
         <%- paragraphs(website.description) %>
 
