--- a/src/views/multiple-building-options.ejs
+++ b/src/views/multiple-building-options.ejs
@@ -4,7 +4,7 @@
 
 <div class="page-content">
     <div class="bordered-box clearfix">
-        <img src="<%= squareLogo.compressedUrl %>" class="side-logo" />
+        <img src="<%= logo.compressedUrl %>" class="side-logo" />
 
         <p>Choose a building:</p>
 
