Make comment icons the core FaultFixers pink.

--- a/src/public/css/elements/icon-colors.less
+++ b/src/public/css/elements/icon-colors.less
@@ -8,7 +8,7 @@
 }
 
 .ff-ticket-comment-circled {
-    color: @highlightColor;
+    color: @coreFFPink;
 }
 .ff-ticket-opened-circled {
     color: #FF0047;
