Support showing building updates in ticket history.

--- a/src/public/css/elements/icon-colors.less
+++ b/src/public/css/elements/icon-colors.less
@@ -30,7 +30,8 @@
 .ff-mileage-circled,
 .ff-ticket-assigned-circled,
 .ff-due-date-time-circled,
-.ff-priority-circled {
+.ff-priority-circled,
+.ff-building-circled {
     color: #11BF96;
 }
 .ff-ticket-unassigned-circled {
