Allow 'Other...' to the bottom of building lists, allowing reporting against the account.

--- a/src/views/partials/building-list.ejs
+++ b/src/views/partials/building-list.ejs
@@ -2,4 +2,6 @@
     <% buildings.forEach(building => { %>
         <li><a href="/buildings/<%= building.id %>"><%= building.name %></a></li>
     <% }) %>
+
+    <li><a href="/report?againstAccount=1">Other...</a></li>
 </ul>
