Expand width of phone number input so placeholder is visible.

--- a/src/views/report.ejs
+++ b/src/views/report.ejs
@@ -74,7 +74,7 @@
             <div class="fieldset bordered-box">
                 <h3>Your Phone Number</h3>
 
-                <input name="phoneNumber" type="tel" placeholder="Incase we need to contact you..." />
+                <input name="phoneNumber" type="tel" placeholder="Incase we need to contact you..." size="30" />
             </div>
         <% } %>
 
