Add 'register' button to logged out home page.

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -32,6 +32,8 @@
             <% } %>
         <% } else if (!isLoggedIn) { %>
             <a href="/log-in" class="button">Log In</a>
+            &nbsp;&nbsp;&nbsp;
+            <a href="/register" class="button">Register</a>
         <% } %>
     </div>
 </div>
