--- a/src/views/partials/page-header.ejs
+++ b/src/views/partials/page-header.ejs
@@ -1,4 +1,6 @@
 <header class="page-header">
+    <i class="ff-icon ff-back" title="Back" onclick="window.history.back();"></i>
+
     <div class="container">
         <h1><%= title %></h1>
     </div>
